<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".upgrades">

    <TextView
        android:id="@+id/counterUpgrades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Num_Of_Cookies"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/helpingHandButton"
        android:layout_width="129dp"
        android:layout_height="67dp"
        android:layout_marginBottom="644dp"
        android:text="@string/Helping_Hand"
        android:textColor="@color/purple_200"
        android:textColorHighlight="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cookieImage"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/handsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="624dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helpingHandButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/handsCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="620dp"
        android:text="@string/upgrade_cost"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helpingHandButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/grandmaButton"
        android:layout_width="129dp"
        android:layout_height="67dp"
        android:text="@string/Grandma"
        android:textColor="@color/purple_200"
        android:textColorHighlight="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/grandmaNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/grandmaButton"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="@+id/grandmaButton"
        app:layout_constraintTop_toBottomOf="@+id/grandmaButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/farmButton"
        android:layout_width="129dp"
        android:layout_height="67dp"
        android:text="@string/Farm"
        android:textColor="@color/purple_200"
        android:textColorHighlight="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/farmCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/upgrade_cost"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/farmButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/farmButton"
        app:layout_constraintTop_toBottomOf="@+id/farmButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/farmNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/farmButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/farmButton"
        app:layout_constraintTop_toBottomOf="@+id/farmButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/grandmaCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/upgrade_cost"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/grandmaButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/grandmaButton"
        app:layout_constraintTop_toBottomOf="@+id/grandmaButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cookiePage"
        android:layout_width="178dp"
        android:layout_height="55dp"
        android:text="Cookie"
        android:textColor="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
</androidx.constraintlayout.widget.ConstraintLayout>